--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^8.40",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.5",
+        "spatie/laravel-query-builder": "^3.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
